<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <CheckBox
            android:id="@+id/CBInputRelativeMouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_mouse_movement" />

        <Button
            android:id="@+id/BTInputKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/keyboard" />

        <Button
            android:id="@+id/BTInputInputControls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/input_controls" />

        <Button
            android:id="@+id/BTInputControllers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/controller_manager" />

        <Button
            android:id="@+id/BTInputMotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/motion_controls" />
    </LinearLayout>
</ScrollView>
