<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/CBDisplayFakeHdr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fake_hdr" />

            <Button
                android:id="@+id/BTDisplayHdrConfig"
                style="@style/ButtonNeutral"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/configure" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CBDisplayFXAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_fxaa" />

        <CheckBox
            android:id="@+id/CBDisplayCRTShader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_crt_shader" />

        <CheckBox
            android:id="@+id/CBDisplayToonShader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_toon_shader" />

        <CheckBox
            android:id="@+id/CBDisplayNTSCEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_ntsc_effect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/texture_filter" />

        <Spinner
            android:id="@+id/SDisplayTextureFilter"
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_vsync_off" />

            <Spinner
                android:id="@+id/SDisplayVsyncLimit"
                style="@style/ComboBox"
                android:layout_width="100dp"
                android:layout_height="44dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDisplayFsrUpscale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_fsr_upscale" />

            <Spinner
                android:id="@+id/SDisplayFsrUpscale"
                style="@style/ComboBox"
                android:layout_width="170dp"
                android:layout_height="44dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDisplayFsrMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_fsr_mode" />

            <Spinner
                android:id="@+id/SDisplayFsrMode"
                style="@style/ComboBox"
                android:layout_width="170dp"
                android:layout_height="44dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/CBDisplayFrameGeneration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/experimental_frame_generation" />
            <ImageView
                android:id="@+id/BTDisplayFrameGenerationHelp"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/icon_help"
                app:tint="?colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLDisplayFrameGenerationSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/frame_generation_profile" />

                <Spinner
                    android:id="@+id/SDisplayFrameGenerationProfile"
                    style="@style/ComboBox"
                    android:layout_width="160dp"
                    android:layout_height="44dp" />

                <ImageView
                    android:id="@+id/BTDisplayFrameGenerationProfileHelp"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/icon_help"
                    app:tint="?colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/frame_generation_multiplier" />

                <Spinner
                    android:id="@+id/SDisplayFrameGenerationMultiplier"
                    style="@style/ComboBox"
                    android:layout_width="150dp"
                    android:layout_height="44dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLDisplayFrameGenerationAutoFPS"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/frame_generation_target_fps" />

                <EditText
                    android:id="@+id/ETDisplayFrameGenerationAutoFPS"
                    android:layout_width="150dp"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="60" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/CBDisplaySwapRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/swap_red_blue_channels" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/configurable_sharpness_filter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/configurable_sharpness_filter_hint"
            android:textColor="#A7A0B5"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/SDisplayVkBasaltEffect"
            style="@style/ComboBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vkbasalt_sharpness_level" />
            <TextView
                android:id="@+id/TVDisplaySharpnessLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar
            android:id="@+id/SBDisplaySharpnessLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vkbasalt_sharpness_denoise" />
            <TextView
                android:id="@+id/TVDisplaySharpnessDenoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>
        <SeekBar
            android:id="@+id/SBDisplaySharpnessDenoise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BTDisplayScreenEffects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="Color Custom" />

            <Button
                android:id="@+id/BTDisplayFullscreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/toggle_fullscreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BTDisplayMagnifier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="@string/magnifier" />

            <Button
                android:id="@+id/BTDisplayPip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/pip_mode" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
